frontend/index.css
body{
    background-color: #302f2f;
    margin-bottom: 200px;

}

.input-contianer{
    display: flex; 
    flex-direction: column;
    width: 900px;
    background-color: rgb(71, 71, 71);
    padding: 10px;
    border-radius: 20px;
    position: fixed; 
    bottom: 30px;
    left: 0; 
    right: 0; 
    margin: auto;
}

#hider{

  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 15.2px;
  
  /* Matches your exact dark theme background color */
  background-color: #302f2f; 
  
  /* Ensures it sits on top of the scrolling text */
  z-index: 50; 
}


#button-el{
    padding: 10px 10px ;
    background: rgb(181, 0, 0);
    color: white;
    outline: none;
    border: none;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    border-radius: 10px;
    width: 40px;
    margin-left: auto;
}


textarea {

  background: transparent;
  border: none;
  outline: none;
  color: white;
  font-size: 16px;
  resize: none;
  width: 100%;
  margin: 10px;
  overflow: hidden;
  box-sizing: border-box;
  max-height: 200px;
  overflow-y: auto;

}


#container{
    color: white;
    width: 850px; 
    margin-left: auto;
    margin-right: auto;

}

.user-res{
    background-color: rgb(35, 34, 34);
    width: fit-content;
    max-width: 800px;
    padding: 10px 16px;
    border-radius: 10px;
    margin-left: auto;
    font-size: 20px;
    margin-bottom: 20px;
    margin-top: 20px;
}

.chatbot-res{
    background-color: transparent;
    margin-top: 20px;
    margin-bottom: 20px;
    font-size: 20px;
}

#input-box{
    background-color: #302f2f;
    padding: 30px;
    position: fixed; 
    bottom: 30px;
    left: 0; 
    right: 0; 
    margin: auto;
}


textarea::-webkit-scrollbar {
  width: 4px;
  
}

textarea::-webkit-scrollbar-track {
  background: transparent;
  
}

textarea::-webkit-scrollbar-thumb {
  background: rgb(120, 120, 120);
  border-radius: 10px;
}

.input-contianer:hover{
    border: 0.3px solid rgb(120, 120, 120);
}

.input-contianer:focus-within {
    border: 0.3px solid rgb(120, 120, 120);
}

